[package]
name = "sx126x"
version = "0.1.1"
authors = ["Henk Dieter Oordt <henkdieter@oordt.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A driver for the SX126X Family of LoRa modems"
keywords = ["embedded", "lora", "sx126x", "lorawan"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
repository = "https://github.com/tweedegolf/sx126x-rs"
exclude = [
    "/examples",
    "/.cargo",
    "/target",
    "/openocd.cfg",
    "/openocd.gdb",
    "/memory.x",
    "/.gitignore",
]

[dependencies]
embedded-hal = "1.0"
cortex-m = "0.6.2"

[dev-dependencies]
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
nb = "0.1.2"
panic-semihosting = "0.5.3"

[dev-dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["stm32f103", "rt", "medium"]

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
