[package]
name = "sx126x"
version = "0.2.0"
authors = ["Henk Oordt <hd@oordt.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A driver for the SX126X Family of LoRa modems"
keywords = ["embedded", "lora", "sx126x", "lorawan"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
repository = "https://github.com/tweedegolf/sx126x-rs"
exclude = [
    "/.cargo",
    "/target",
    "/.gitignore",
]

[dependencies]
embedded-hal = "1.0"
critical-section = "^1"

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
